--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body{
-    background:#000000;
+    background: #eeedec;
     letter-spacing: 0.2em;
     font-size: 0.8em;
   }
   .container{
-    max-width: 800px;
+    max-width: 400px;
   }
   .icon{
     position: relative;
